fix some aligning icon next to the text label. more.html

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -853,8 +853,10 @@ visibility:visible; width: 70px; height: 70px;
 
 
 /*more page*/
-.more-page ul.list li a { color: #02b6ef; text-decoration: none; font-size: 18px; font-weight: lighter !important;}
-.more-page ul.list li span { margin: 0 10px 0 0}
+.more-page ul.list li:not(.item-divider) { border-bottom: 1px solid #eaeaea}
+.more-page ul.list li a { color: #000; text-decoration: none; font-size: 18px; font-weight: lighter !important;}
+.more-page ul.list li span { margin: 0px 15px 0 0; float: left;}
+.more-page ul.list li span[class*="icon-"] { font-size: 14.6px; margin-top: 1.6px}
 .more-page ul.list li.item-divider span { margin: 0 20px 0 0}
 .more-page ul.list li:not(.item-divider):after { content: "\f105"; font-family: 'FontAwesome'; position: absolute; right: 10px; top: 12px; color: #b2b2b2; font-size: 16px;}
 
